--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+⁸<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
@@ -25,7 +25,7 @@
       display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;
       gap: 10px; margin-bottom: 10px; background-color: #FFFFFF; border-radius: 4px;
     }
-    .logo { width: 120px; max-width: 30%; height: 120px; }
+    .logo { width: 120px; max-width: 30%; height: auto; }
     .linha-horizontal, .linha-horizontal-2, .linha-horizontal-3 {
       display: flex; gap: 10px; flex-wrap: wrap; margin-top: 3px;
     }
@@ -34,7 +34,7 @@
     }
     label { display: block; margin-top: 7px; }
     input[type="text"], input[type="date"], input[type="time"], textarea {
-      width: 100%; padding: 4px; font-weight: bold; font-size: 15px;
+      width: 100%; padding: 5px; font-weight: bold; font-size: 15px;
       color: blue; border-radius: 4px;
     }
     textarea {
@@ -295,6 +295,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
