--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       color: blue; border-radius: 4px;
     }
     textarea {
-      height: auto; min-height: 180px; color: blue; font-family: Arial, sans-serif; font-size: 14px;
+      height: auto; color: blue; font-family: Arial, sans-serif; font-size: 14px;
     }
     .btn {
       margin-top: 10px; padding: 10px 15px; font-weight: bold; font-size: 18px;
@@ -51,16 +51,16 @@
     }
     .btn:not(:last-child) { margin-bottom: 10px; }
     p {
-      color: red; margin-top: 1px; font-size: 11px; text-align: center; background-color: yellow; padding: 2px;
+      color: red; margin-top: 1px; font-size: 12px; text-align: center; background-color: yellow; padding: 2px;
     }
     #pdf-content { background-color: #D6FFFF; padding: 15px 10px; border-radius: 4px; }
     canvas#assinatura { border: 1px solid #000; }
-    .neumann { font-size: 8px; color: black; text-align: right; margin-bottom: 15px; }
+    .neumann { font-size: 9px; color: black; text-align: right; margin-bottom: 15px; }
     .equipe { margin-top: 3px; background-color: #dbead5; padding: 5px 3px; border-radius: 4px; color: #132c0d; }
   </style>
 </head>
 <body>
-<label for="nome" style="font-size: 7px;">© 2025 Leonildo.Neumann</label>
+<label for="nome" style="font-size: 8px; color: yellow;">© 2025 Leonildo.Neumann</label>
 <div id="pdf-content">
   <div class="logo-container">
     <img src="logo-prefeitura.png" crossorigin="anonymous" alt="Prefeitura" class="logo">
@@ -295,6 +295,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
