--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <label>NÚMERO DO TELEFONE: <input type="text" name="telefone"></label>
   </div>
   <label>LOCAL DA OCORRÊNCIA: <input type="text" name="local"></label>
-  <label>SITUAÇÃO INFORMADA: <textarea style="min-height: 60px;"></textarea></label>
+  <label>SITUAÇÃO INFORMADA: <textarea name="situacao"></textarea></label>
   <label>3 - RELATÓRIO DO ATENDIMENTO E AÇÕES REALIZADAS: <textarea name="relatorio"></textarea></label>
   <label>- Autos de infração lavrados: <input type="text" name="autos"></label>
   <label>- Número de pessoas atendidas: <input type="text" name="pessoas_atendidas"></label>
@@ -295,6 +295,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
