--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Relatório de Atendimento de Ocorrência Texte</title>
+  <title>Relatório de Atendimento de Ocorrência</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icon-192.png">
+<link rel="icon" href="icon-192.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
     body {
       font-family: Arial, sans-serif;
       padding: 15px;
@@ -17,105 +19,184 @@
       font-weight: bold;
       max-width: 900px;
       margin: auto;
-      color: #15400e;
-      background-color: #0088FF;
+      color: black;
+      background-color: #20B2AA;
     }
-    h1 { text-align: center; font-size: 22px; margin-top: 1px; color: blue; }
+    h1 {
+      text-align: center;
+      font-size: 19px;
+      margin-top: 2px;
+      color: blue;
+    }
+    h2 {
+      text-align: center;
+      font-size: 16px;
+      margin-top: 1px;
+      color: green;
+    }
+
     .logo-container {
-      display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;
-      gap: 10px; margin-bottom: 10px; background-color: #FFFFFF; border-radius: 4px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-bottom: 10px;
+      background-color: #FFFFFF;
+      border-radius: 4px;
     }
-    .logo { width: 120px; max-width: 30%; height: auto; }
-    .linha-horizontal, .linha-horizontal-2, .linha-horizontal-3 {
-      display: flex; gap: 10px; flex-wrap: wrap; margin-top: 3px;
+    .logo {
+      width: 120px;
+      max-width: 30%;
+      height: auto;
     }
-    .linha-horizontal label, .linha-horizontal-2 label, .linha-horizontal-3 label {
-      flex: 1; min-width: 180px;
+    .linha-horizontal,
+    .linha-horizontal-2,
+    .linha-horizontal-3 {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin-top: 3px;
     }
-    label { display: block; margin-top: 7px; }
-    input[type="text"], input[type="date"], input[type="time"], textarea {
-      width: 100%; padding: 5px; font-weight: bold; font-size: 15px;
-      color: blue; border-radius: 4px;
+    .linha-horizontal label,
+    .linha-horizontal-2 label,
+    .linha-horizontal-3 label {
+      flex: 1;
+      min-width: 180px;
+    }
+    label {
+      display: block;
+      margin-top: 8px;
+    }
+    input[type="text"],
+    input[type="date"],
+    input[type="time"],
+    textarea {
+      width: 100%;
+      padding: 5px;
+      font-weight: bold;
+      font-size: 14px;
+      color: blue;
+      border-radius: 4px;
     }
     textarea {
-      height: auto; color: blue; font-family: Arial, sans-serif; font-size: 14px;
+      height: auto;
+      min-height: 180px;
+      color: blue;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
     }
     .btn {
-      margin-top: 10px; padding: 10px 15px; font-weight: bold; font-size: 18px;
-      background-color: #D6FFFF; color: blue; border-radius: 10px;
-      cursor: pointer; width: 100%;
+      margin-top: 10px;
+      padding: 10px 15px;
+      font-weight: bold;
+      font-size: 18px;
+      background-color: #dbead5;
+      color: blue;
+      border-radius: 10px;
+      cursor: pointer;
+      width: 100%;
     }
     .botao {
-      color: #15400e; padding: 10px 15px; text-align: center; display: inline-block;
-      font-size: 16px; cursor: pointer; border-radius: 10px; width: 100%; background-color: #D6FFFF;
+      color: yellow;
+      padding: 10px 15px;
+      text-align: center;
+      display: inline-block;
+      font-size: 15px;
+      cursor: pointer;
+      border-radius: 10px; /* Bordas arredondadas */
+      width: 100%;
     }
-    .btn:not(:last-child) { margin-bottom: 10px; }
+    .btn:not(:last-child) {
+      margin-bottom: 10px;
+    }
     p {
-      color: red; margin-top: 1px; font-size: 12px; text-align: center; background-color: yellow; padding: 2px;
+      color: red;
+      margin-top: 2px;
+      font-size: 12px;
+      text-align: center;
+      background-color: yellow;
+      padding: 2px;
     }
-    #pdf-content { background-color: #D6FFFF; padding: 15px 10px; border-radius: 4px; }
-    canvas#assinatura { border: 1px solid #000; }
-    .neumann { font-size: 9px; color: black; text-align: right; margin-bottom: 15px; }
-    .equipe { margin-top: 3px; background-color: #dbead5; padding: 5px 3px; border-radius: 4px; color: #132c0d; }
+    #pdf-content {
+      background-color: #dbead5;
+      padding: 14px 10px;
+      border-radius: 4px;
+    }
+    canvas#assinatura {
+      border: 1px solid #000;
+    }
+    .neumann {
+      font-size: 9px;
+      color: black;
+      text-align: right;
+      margin-bottom: 15px;
+    }
+    .equipe {
+      margin-top: 3px;
+      background-color: lightblue;
+      padding: 5px 3px;
+      border-radius: 4px;
+      
+    }
+
   </style>
 </head>
 <body>
-<label for="nome" style="font-size: 8px; color: yellow;">© 2025 Leonildo.Neumann</label>
-<div id="pdf-content">
-  <div class="logo-container">
-    <img src="logo-prefeitura.png" crossorigin="anonymous" alt="Prefeitura" class="logo">
-    <label for="nome" style="font-size: 26px;">SETRAN</label>
-    <img src="logo-setran.png" crossorigin="anonymous" alt="Setran" class="logo">
-  </div>
-  <h1><u>RELATÓRIO DE ATENDIMENTO DE TEXTE</u></h1>
+<label for="nome" style="font-size: 6px;">© 2025 Leonildo.Neumann</label>
+  <div id="pdf-content">
+<div class="logo-container">
+  <img src="logo-prefeitura.png" crossorigin="anonymous" alt="Prefeitura" class="logo">
+  <img src="logo-setran.png" crossorigin="anonymous" alt="Setran" class="logo">
+  <img src="logo-guarda.png" crossorigin="anonymous" alt="Guarda" class="logo">
+</div>
+  <h1><u>GUARDA PATRIMONIAL</u></h1>
+  <h2>RELATÓRIO DE ATENDIMENTO DE OCORRÊNCIA</h2>
 
   <label>1 - NÚMERO: <input type="text" name="numero" style="width: 70px;"> ANO: <input type="text" name="ano" style="width: 50px;"></label>
+
   <div class="linha-horizontal">
-    <label>Data: <input type="date" name="data"></label>
-    <label>Hora Início: <input type="time" name="hora_inicio"></label>
-    <label>Hora Término: <input type="time" name="hora_termino"></label>
+    <label>DATA: <input type="date" name="data"></label>
+    <label>HORA INÍCIO: <input type="time" name="hora_inicio"></label>
+    <label>HORA TÉRMINO: <input type="time" name="hora_termino"></label>
   </div>
   <div class="linha-horizontal">
-    <label>2 - SOLICITANTE: <input type="text" name="solicitante"></label>
-    <label>NÚMERO DO TELEFONE: <input type="text" name="telefone"></label>
+  <label>2 - SOLICITANTE: <input type="text" name="solicitante"></label>
+  <label>NÚMERO DO TELEFONE: <input type="text" name="telefone"></label>
   </div>
   <label>LOCAL DA OCORRÊNCIA: <input type="text" name="local"></label>
   <label>SITUAÇÃO INFORMADA: <textarea name="situacao"></textarea></label>
+
   <label>3 - RELATÓRIO DO ATENDIMENTO E AÇÕES REALIZADAS: <textarea name="relatorio"></textarea></label>
-  <label>- Autos de infração lavrados: <input type="text" name="autos"></label>
-  <label>- Número de pessoas atendidas: <input type="text" name="pessoas_atendidas"></label>
-  <label>- Veículos recolhidos: <input type="text" name="veiculos"></label>
+  <label>- NÚMERO DE PESSOAS ATENDIDAS: <input type="text" name="pessoas_atendidas"></label>
 
-  <div class="equipe">
-    <label>4 - EQUIPE:</label>
-    <div class="linha-horizontal-2">
-      <label>Agente 1 (Responsável pelo preenchimento): <input type="text" name="responsavel"></label>
-      <label>Nome Agente 2: <input type="text" name="assinatura2"></label>
-    </div>
-    <div class="linha-horizontal-3">
-      <label>Nome Agente 3: <input type="text" name="assinatura3"></label>
-      <label>Nome Agente 4: <input type="text" name="assinatura4"></label>
-    </div>
-    <label>VTR(s): <input type="text" name="vtr"></label>
-   </div> 
-  <div class="assinatura">
-    <label>Assinaturas (Agentes 1, 2, 3 e 4):</label>
-    <canvas id="assinatura" width="690" height="170"></canvas><br>
+ <div class="equipe"> 
+  <label>4 - EQUIPE:</label>
+  <div class="linha-horizontal-2">
+    <label>Agente 1 (Responsável pelo preenchimento): <input type="text" name="responsavel"></label>
+    <label>Nome Agente 2: <input type="text" name="assinatura2"></label>
   </div>
-
-  <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de ACIDENTES/OCORRÊNCIA da SETRAN, e não substitui o registro realizado por outros órgãos.</p>
+  <div class="linha-horizontal-3">
+    <label>Nome Agente 3: <input type="text" name="assinatura3"></label>
+    <label>Nome Agente 4: <input type="text" name="assinatura4"></label>
+  </div>
+  <label>VTR(s): <input type="text" name="vtr"></label>
+ </div>
+<div class="assinatura">    
+<label>ASSINATURAS (Agentes 1, 2, 3 e 4):</label>
+<canvas id="assinatura" width="690" height="170" style="border:1px solid #000;"></canvas><br>
+</div>
+  <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de OCORRÊNCIA da GUARDA PATRIMONIAL, e não substitui o registro realizado por outros órgãos.</p>
 
   <div class="neumann">
-    <div style="position: relative;">
-      <label style="position: absolute; right: 0;">© 2025 Leonildo.Neumann</label>
-    </div>
+   <div style="position: relative;">
+   <label for="meuInput" style="position: absolute; right: 0;">© 2025 Leonildo.Neumann</label>
   </div>
 </div>
-
-<button class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
-<button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
-<button class="btn" onclick="gerarPDF()">Baixar PDF</button>
-<a href="https://www.ctbdigital.com.br/busca-artigo" target="_blank" class="botao">CTB DIGITAL - código de trânsito brasileiro</a>
+</div>
+<button type="button" class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
+<button type="button" class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
+<button type="button" class="btn" onclick="gerarPDF()">Baixar PDF</button>
 
 <script>
 const canvas = document.getElementById('assinatura');
@@ -216,9 +297,10 @@ function gerarPDF() {
       windowWidth: document.documentElement.scrollWidth,
       windowHeight: document.documentElement.scrollHeight
     },
-pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },    
-    jsPDF: { unit: 'mm', format: 'a3', orientation: 'portrait' }
-  };
+pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },
+    
+    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+  };  
   html2pdf().set(opt).from(clone).save().then(() => {
     document.body.removeChild(container);
   });
@@ -253,7 +335,7 @@ async function compartilharPDF() {
 
   const opt = {
     margin: [5, 5, 5, 5],
-    filename: getNumeroRelatorio(),
+    filename: gerarNomePDFComDataHora(),
     image: { type: 'jpeg', quality: 0.98 },
     html2canvas: { 
       scale: 3,
@@ -263,7 +345,7 @@ async function compartilharPDF() {
       windowHeight: document.documentElement.scrollHeight
     },
     pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },
-    jsPDF: { unit: 'mm', format:'a3', orientation: 'portrait' }
+    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
   };
 
   const blob = await html2pdf().set(opt).from(clone).outputPdf('blob');
