--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ async function compartilharPDF() {
 
   const opt = {
     margin: [5, 5, 5, 5],
-    filename: gerarNomePDFComDataHora(),
+    filename: getNumeroRelatorio(),
     image: { type: 'jpeg', quality: 0.98 },
     html2canvas: { 
       scale: 3,
@@ -377,6 +377,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
