--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Relatório de Atendimento de Ocorrência</title>
   <link rel="manifest" href="manifest.json">
-<link rel="icon" href="icon-gurda .png">
+<link rel="icon" href="icon-192.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -81,7 +81,7 @@
     }
     textarea {
       height: auto;
-      
+      min-height: 180px;
       color: blue;
       font-family: Arial, sans-serif;
       font-size: 14px;
@@ -377,6 +377,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
