--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
 <div class="digital">
-<a href="https://www.ctbdigital.com.br/">
+<a href="https://www.ctbdigital.com.br/busca-artigo" target="_blank">
 <img src=https://2b04290231.cbaul-cdnwnd.com/2d5a2f4cd029962311c16a1a0d01bbc2/200000323-f2bd5f2bd7/700/ctb%20digital-mini.webp?ph=2b04290231 style="width: 200px; height: 100px; margin: 0 auto; display: block;">
 </a>
 </div>
@@ -336,6 +336,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
