--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     }
     .foto-box img {
       max-width: 100%;
-      max-height: 400px; /* garante que caiba em uma página A4 */
+      max-height: 200px; /* garante que caiba em uma página A4 */
       object-fit: contain;
       border: 1px solid #000;
       border-radius: 5px;
@@ -158,7 +158,7 @@
 </div>
 
 <button class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
-<button class="btn" onclick="document.getElementById('fotoInput').click()">Tirar Foto</button>
+<button class="btn" onclick="document.getElementById('fotoInput').click()">Adicionar Fotos</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
 <div class="digital">
@@ -382,6 +382,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
