--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 <button class="btn" onclick="document.getElementById('fotoInput').click()">Adicionar Fotos</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
+<a href="BUSCA CTB capítulo XV.html" target="_blank" class="botao">BUSCAR NO CTB CAPÍTULO XV (Das Infrações)</a>
+  
 <div class="digital">
 <a href="https://www.ctbdigital.com.br/busca-artigo" target="_blank">
 <img src=https://2b04290231.cbaul-cdnwnd.com/2d5a2f4cd029962311c16a1a0d01bbc2/200000323-f2bd5f2bd7/700/ctb%20digital-mini.webp?ph=2b04290231 style="width: 200px; height: 100px; margin: 0 auto; display: block;">
@@ -382,6 +384,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
