--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       cursor: pointer; width: 100%;
     }
     .botao {
-      color: blue; padding: 10px 15px; text-align: center; display: inline-block;
-      font-size: 16px; cursor: pointer; border-radius: 10px; width: 100%; background-color: #D6FFFF;
+      color: darkgreen; padding: 10px 15px; text-align: center; display: inline-block;
+      font-size: 16px; cursor: pointer; border-radius: 10px; width: 100%; background-color: #dbead5;
     }
     .btn:not(:last-child) { margin-bottom: 10px; }
     p {
@@ -57,7 +57,7 @@
     canvas#assinatura { border: 1px solid #000; }
     .neumann { font-size: 8px; color: black; text-align: right; margin-bottom: 15px; }
     .equipe { margin-top: 3px; background-color: #dbead5; padding: 5px 3px; border-radius: 4px; color: #132c0d; }
-    .digital { margin-top: 3px; padding: 10px 15px; font-weight: bold; font-size: 18px;
+    .digital { margin-top: 6px; padding: 10px 15px; font-weight: bold; font-size: 18px;
       background-color: #D6FFFF; color: blue; border-radius: 10px;
       cursor: pointer; width: 100%; }
     /* 🔹 Ajustes para fotos */
@@ -161,7 +161,7 @@
 <button class="btn" onclick="document.getElementById('fotoInput').click()">Adicionar Fotos</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
-<a href="BUSCA CTB capítulo XV.html" target="_blank" class="botao">BUSCAR NO CTB CAPÍTULO XV (Das Infrações)</a>
+<a href="BUSCA CTB capítulo XV.html" target="_blank" class="botao">CTB CAPÍTULO XV ( Das Infrações )</a>
   
 <div class="digital">
 <a href="https://www.ctbdigital.com.br/busca-artigo" target="_blank">
@@ -384,6 +384,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
