--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
     </div>
   </div>
 </div>
+<div style="text-align:center; margin-top:15px;">
+  <a href="termos.html" target="_blank">📑 Termos de Uso</a>
+</div>
 
 <button class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
 <button class="btn" onclick="document.getElementById('fotoInput').click()">Adicionar Fotos</button>
@@ -384,6 +387,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
