--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   </div>
 </div>
 <div style="text-align:center; margin-top:15px;">
-  <a href="termos.html" target="_blank">📑 Termos de Uso</a>
+  <a href="termos de uso.html" target="_blank">📑 Termos de Uso</a>
 </div>
 
 <button class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
@@ -387,6 +387,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
