--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
     .btn:not(:last-child) { margin-bottom: 10px; }
     p {
-      color: red; margin-top: 1px; font-size: 12px; text-align: center; background-color: yellow; padding: 2px;
+      color: red; margin-top: 1px; font-size: 12px; text-align: center; padding: 2px;
     }
     #pdf-content { background-color: #D6FFFF; padding: 15px 10px; border-radius: 4px; }
     canvas#assinatura { border: 1px solid #000; }
@@ -156,7 +156,7 @@
     </div>
   </div>
 </div>
-<div style="text-align:center; margin-top:15px;">
+<div style="text-align:center; background-color: yelloow;"
   <a href="termos de uso.html" target="_blank">📑 Termos de Uso</a>
 </div>
 
@@ -387,6 +387,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
