--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
   </div>
 </div>
-<div style="text-align:center; background-color: yelloow;"
+<div style="text-align:center; background-color: yellow; margin-top: 15px;"
   <a href="termos de uso.html" target="_blank">📑 Termos de Uso</a>
 </div>
 
@@ -387,6 +387,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
