--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
     </div>
   </div>
 </div>
-<div style="text-align:center; background-color: yellow; margin-top: 15px;"
+</div>
+<div style="text-align:center; margin-top:10px; margin-bottom: 10px; background-color: yellow; padding: 10px 15px;">
   <a href="termos de uso.html" target="_blank">📑 Termos de Uso</a>
 </div>
 
@@ -387,6 +388,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
