--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
     .btn:not(:last-child) { margin-bottom: 10px; }
     p {
-      color: red; margin-top: 1px; font-size: 12px; text-align: center; padding: 2px;
+      color: red; margin-top: 1px; font-size: 12px; text-align: center; padding: 2px; background-color: #ffffc5;
     }
     #pdf-content { background-color: #D6FFFF; padding: 15px 10px; border-radius: 4px; }
     canvas#assinatura { border: 1px solid #000; }
@@ -157,7 +157,7 @@
   </div>
 </div>
 </div>
-<div style="text-align:center; margin-top:10px; margin-bottom: 10px; background-color: yellow; padding: 10px 15px;">
+<div style="text-align:center; margin-top:10px; margin-bottom: 10px; background-color: yellow; padding: 8px 12px;">
   <a href="termos de uso.html" target="_blank">📑 Termos de Uso</a>
 </div>
 
@@ -388,6 +388,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
