--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       background-color: #D6FFFF; color: blue; border-radius: 10px;
       cursor: pointer; width: 100%;
     }
-    .botao {
-      color: darkgreen; padding: 10px 15px; text-align: center; display: inline-block;
-      font-size: 16px; cursor: pointer; border-radius: 10px; width: 100%; background-color: #dbead5;
+    .botao { /* reservado pra botão com link */
+      color: #FFFFFF; padding: 10px 15px; text-align: center; display: inline-block;
+      font-size: 17px; cursor: pointer; border-radius: 10px; width: 100%; background-color: green; text-decoration: none;
     }
     .btn:not(:last-child) { margin-bottom: 10px; }
     p {
@@ -57,15 +57,17 @@
     canvas#assinatura { border: 1px solid #000; }
     .neumann { font-size: 8px; color: black; text-align: right; margin-bottom: 15px; }
     .equipe { margin-top: 3px; background-color: #dbead5; padding: 5px 3px; border-radius: 4px; color: #132c0d; }
+    /* 🔹 Ajustes www.ctbdigital.com.br */
     .digital { margin-top: 6px; padding: 10px 15px; font-weight: bold; font-size: 18px;
-      background-color: #D6FFFF; color: blue; border-radius: 10px;
+      background-color: green; color: blue; border-radius: 10px;
       cursor: pointer; width: 100%; }
+    
     /* 🔹 Ajustes para fotos */
     #fotos-container {
-      margin-top: 10px;
+      margin-top: 5px;
     }
     .foto-box {
-      margin-bottom: 10px;
+      margin-bottom: 5px;
       page-break-inside: avoid; /* evita cortar foto no meio */
       break-inside: avoid;
       text-align: center;
@@ -77,7 +79,6 @@
       border: 1px solid #000;
       border-radius: 5px;
     }
-
   </style>
 </head>
 <body>
@@ -93,21 +94,7 @@
   <label style="text-align: center">1 - NÚMERO: 
     <input type="text" name="numero" style="width: 70px;"> 
     ANO: <input type="text" name="ano" style="width: 50px;"></label> 
-    <label style="margin-top: 2px">Tipo de Atendimento:
-    <select name="tipo" style="width: 250px;">
-      <option>Selecione</option>
-      <option>Abalroamento transversal</option>
-      <option>Abalroamento lateral</option>
-      <option>Colisão traseira</option>
-      <option>Colisão frontal</option>
-      <option>Capotamento</option>
-      <option>Tombamento</option>
-      <option>Choque</option>
-      <option>Atropelamento</option>
-      <option>Complexo</option>
-    </select>
-  </label>
-
+    
   <div class="linha-horizontal">
     <label>Data: <input type="date" name="data"></label>
     <label>Hora Início: <input type="time" name="hora_inicio"></label>
@@ -137,7 +124,6 @@
     <label>VTR(s): <input type="text" name="vtr"></label>
    </div>
   <!-- 🔹 Seção para fotos -->
-  
   <input type="file" id="fotoInput" accept="image/*" multiple style="display:none">
   <div id="fotos-container">
     <label>Fotos do Local:</label><br>
@@ -146,8 +132,7 @@
   <div class="assinatura">
     <label>Assinaturas (Agentes 1, 2, 3 e 4):</label>
     <canvas id="assinatura" width="690" height="170"></canvas><br>
-  </div>
-
+   </div>
   <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de ACIDENTES/OCORRÊNCIA da SETRAN, e não substitui o registro realizado por outros órgãos.</p>
 
   <div class="neumann">
@@ -156,20 +141,20 @@
     </div>
   </div>
 </div>
-</div>
-<div style="text-align:center; margin-top:10px; margin-bottom: 10px; background-color: yellow; padding: 8px 12px;">
+<div style="text-align:center; margin-top:10px; margin-bottom: 5px; background-color: yellow; padding: 10px 15px;">
   <a href="termos de uso.html" target="_blank">📑 Termos de Uso</a>
 </div>
-
 <button class="btn" onclick="limparAssinatura()">Limpar Assinatura</button>
-<button class="btn" onclick="document.getElementById('fotoInput').click()">Adicionar Fotos</button>
+<button class="btn" onclick="document.getElementById('fotoInput').click()">📷 Adicionar Foto</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
-<a href="BUSCA CTB capítulo XV.html" target="_blank" class="botao">CTB CAPÍTULO XV ( Das Infrações )</a>
-  
+
+
+
+<a href="BUSCA CTB capítulo XV 2.html" target="_blank" class="botao">CTB CAPÍTULO XV ( Das Infrações )</a>
 <div class="digital">
 <a href="https://www.ctbdigital.com.br/busca-artigo" target="_blank">
-<img src=https://2b04290231.cbaul-cdnwnd.com/2d5a2f4cd029962311c16a1a0d01bbc2/200000323-f2bd5f2bd7/700/ctb%20digital-mini.webp?ph=2b04290231 style="width: 200px; height: 100px; margin: 0 auto; display: block;">
+<img src=https://ec8cdf0b81.cbaul-cdnwnd.com/4862c32e4e9e39e3136f5b1c72516de8/200000017-b30b7b30b9/450/Captura%20de%20tela%202025-09-12%20202715.webp?ph=ec8cdf0b81 style="width: 298px; height: 91px; margin: 0 auto; display: block;">
 </a>
 </div>
 
@@ -268,13 +253,13 @@ function prepararCampos(clone) {
 }
 
 function getNumeroRelatorio() {
-  const tipo = document.querySelector('select[name="tipo"]').value.trim();
+  
   const numero = document.querySelector('input[name="numero"]').value.trim();
   const agora = new Date();
   const data = agora.toLocaleDateString('pt-BR').split('/').reverse().join('-');
   const hora = agora.toTimeString().split(' ')[0].replace(/:/g, '-');
   if (numero) {
-    return `${numero}_${tipo}_${data}_${hora}.pdf`;
+    return `${numero}}_${data}_${hora}.pdf`;
   } else {
     return `relatorio_${data}_${hora}.pdf`;
   }
@@ -359,7 +344,8 @@ async function compartilharPDF() {
 
   document.body.removeChild(container);
 }
-  /* 🔹 Script para fotos (até 3) */
+
+/* 🔹 Script para fotos (até 3) */
 const fotoInput = document.getElementById('fotoInput');
 const fotosContainer = document.getElementById('fotos-container');
 
@@ -379,7 +365,6 @@ fotoInput.addEventListener('change', (event) => {
   });
 });
 
-
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('sw.js')
     .then(() => console.log('Service Worker registrado com sucesso'))
@@ -388,6 +373,8 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
+
 
 
 
