--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
 
-<a href="BUSCA CTB capítulo XV 2.html" target="_blank" class="botao">CTB CAPÍTULO XV ( Das Infrações )</a>
+<a href="BUSCA CTB capítulo XV.html" target="_blank" class="botao">CTB CAPÍTULO XV ( Das Infrações )</a>
 <div class="digital">
 <a href="https://www.ctbdigital.com.br/busca-artigo" target="_blank">
 <img src=https://ec8cdf0b81.cbaul-cdnwnd.com/4862c32e4e9e39e3136f5b1c72516de8/200000017-b30b7b30b9/450/Captura%20de%20tela%202025-09-12%20202715.webp?ph=ec8cdf0b81 style="width: 298px; height: 91px; margin: 0 auto; display: block;">
@@ -373,6 +373,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
