--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     }
     .logo { width: 120px; max-width: 30%; height: auto; }
     .linha-horizontal, .linha-horizontal-2, .linha-horizontal-3 {
-      display: flex; gap: 10px; flex-wrap: wrap; margin-top: 2px;
+      display: flex; gap: 10px; flex-wrap: wrap; margin-top: 3px;
     }
     .linha-horizontal label, .linha-horizontal-2 label, .linha-horizontal-3 label {
       flex: 1; min-width: 180px;
     }
     label { display: block; margin-top: 7px; }
-    input[type="text"], input[type="date"], input[type="time"], textarea, select {
+    input[type="text"], input[type="date"], input[type="time"], textarea {
       width: 100%; padding: 5px; font-weight: bold; font-size: 15px;
       color: blue; border-radius: 4px;
     }
-    textarea {
+      textarea {
       height: auto; min-height: 180px; color: blue; font-family: Arial, sans-serif; font-size: 14px;
     }
     .btn {
@@ -57,12 +57,11 @@
     canvas#assinatura { border: 1px solid #000; }
     .neumann { font-size: 8px; color: black; text-align: right; margin-bottom: 15px; }
     .equipe { margin-top: 3px; background-color: #dbead5; padding: 5px 3px; border-radius: 4px; color: #132c0d; }
-    /* 🔹 Ajustes www.ctbdigital.com.br */
+ /* 🔹 Ajustes www.ctbdigital.com.br */
     .digital { margin-top: 6px; padding: 10px 15px; font-weight: bold; font-size: 18px;
       background-color: green; color: blue; border-radius: 10px;
       cursor: pointer; width: 100%; }
-    
-    /* 🔹 Ajustes para fotos */
+ /* 🔹 Ajustes para fotos */
     #fotos-container {
       margin-top: 5px;
     }
@@ -79,6 +78,7 @@
       border: 1px solid #000;
       border-radius: 5px;
     }
+
   </style>
 </head>
 <body>
@@ -91,10 +91,7 @@
   </div>
   <h1><u>RELATÓRIO DE ATENDIMENTO DE OCORRÊNCIA</u></h1>
 
-  <label style="text-align: center">1 - NÚMERO: 
-    <input type="text" name="numero" style="width: 70px;"> 
-    ANO: <input type="text" name="ano" style="width: 50px;"></label> 
-    
+  <label style="text-align: center">1 - NÚMERO: <input type="text" name="numero" style="width: 70px;"> ANO: <input type="text" name="ano" style="width: 50px;"></label>
   <div class="linha-horizontal">
     <label>Data: <input type="date" name="data"></label>
     <label>Hora Início: <input type="time" name="hora_inicio"></label>
@@ -123,16 +120,16 @@
     </div>
     <label>VTR(s): <input type="text" name="vtr"></label>
    </div>
-  <!-- 🔹 Seção para fotos -->
+<!-- 🔹 Seção para fotos -->
   <input type="file" id="fotoInput" accept="image/*" multiple style="display:none">
   <div id="fotos-container">
     <label>Fotos do Local:</label><br>
-  </div>
-
+  </div> 
   <div class="assinatura">
     <label>Assinaturas (Agentes 1, 2, 3 e 4):</label>
     <canvas id="assinatura" width="690" height="170"></canvas><br>
-   </div>
+  </div>
+
   <p><strong>OBS:</strong> Este documento é uma coleta preliminar de dados, para controle de atendimentos de ACIDENTES/OCORRÊNCIA da SETRAN, e não substitui o registro realizado por outros órgãos.</p>
 
   <div class="neumann">
@@ -148,9 +145,6 @@
 <button class="btn" onclick="document.getElementById('fotoInput').click()">📷 Adicionar Foto</button>
 <button class="btn" onclick="compartilharPDF()">Compartilhar PDF</button>
 <button class="btn" onclick="gerarPDF()">Baixar PDF</button>
-
-
-
 <a href="BUSCA CTB capítulo XV.html" target="_blank" class="botao">CTB CAPÍTULO XV ( Das Infrações )</a>
 <div class="digital">
 <a href="https://www.ctbdigital.com.br/busca-artigo" target="_blank">
@@ -211,12 +205,23 @@ function prepararAssinatura(clone) {
   }
 }
 
-// 🔹 NOVO: converte textarea e select do clone pegando valores do original
-function prepararCampos(clone) {
-  // Textareas
-  const origTextareas = document.querySelectorAll('textarea');
-  const cloneTextareas = clone.querySelectorAll('textarea');
-  cloneTextareas.forEach((textarea, i) => {
+function getNumeroRelatorio() {
+  const numero = document.querySelector('input[name="numero"]').value.trim();
+  const agora = new Date();
+  const data = agora.toLocaleDateString('pt-BR').split('/').reverse().join('-');
+  const hora = agora.toTimeString().split(' ')[0].replace(/:/g, '-');
+if (numero) {
+  return `relatorio_${numero}_${data}_${hora}.pdf`;
+} else {
+return `relatorio_${data}_${hora}.pdf`; // nome padrão caso esteja vazio
+  }
+}
+
+function gerarPDF() {
+  const original = document.getElementById('pdf-content');
+  const clone = original.cloneNode(true);
+  const textareas = clone.querySelectorAll('textarea');
+  textareas.forEach(textarea => {
     const div = document.createElement('div');
     div.style.whiteSpace = 'pre-wrap';
     div.style.border = '1px solid #ccc';
@@ -226,52 +231,10 @@ function prepararCampos(clone) {
     div.style.fontSize = '14px';
     div.style.backgroundColor = 'white';
     div.style.color = 'blue';
-    div.textContent = origTextareas[i].value;
+    div.textContent = textarea.value;
     textarea.parentNode.replaceChild(div, textarea);
   });
-
-  // Selects
-  const origSelects = document.querySelectorAll('select');
-  const cloneSelects = clone.querySelectorAll('select');
-  cloneSelects.forEach((select, i) => {
-    const div = document.createElement('div');
-    div.style.border = '1px solid #ccc';
-    div.style.padding = '5px';
-    div.style.minHeight = '30px';
-    div.style.fontWeight = 'bold';
-    div.style.fontSize = '14px';
-    div.style.backgroundColor = 'white';
-    div.style.color = 'blue';
-
-    let texto = '';
-    if (origSelects[i].selectedIndex >= 0) {
-      texto = origSelects[i].options[origSelects[i].selectedIndex].textContent.trim();
-    }
-    div.textContent = texto || 'Não selecionado';
-    select.parentNode.replaceChild(div, select);
-  });
-}
-
-function getNumeroRelatorio() {
-  
-  const numero = document.querySelector('input[name="numero"]').value.trim();
-  const agora = new Date();
-  const data = agora.toLocaleDateString('pt-BR').split('/').reverse().join('-');
-  const hora = agora.toTimeString().split(' ')[0].replace(/:/g, '-');
-  if (numero) {
-    return `${numero}}_${data}_${hora}.pdf`;
-  } else {
-    return `relatorio_${data}_${hora}.pdf`;
-  }
-}
-
-function gerarPDF() {
-  const original = document.getElementById('pdf-content');
-  const clone = original.cloneNode(true);
-
-  prepararCampos(clone);
   prepararAssinatura(clone);
-
   const container = document.createElement('div');
   container.style.position = 'absolute';
   container.style.left = '-9999px';
@@ -289,7 +252,7 @@ function gerarPDF() {
       windowWidth: document.documentElement.scrollWidth,
       windowHeight: document.documentElement.scrollHeight
     },
-    pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },    
+pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },    
     jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
   };
   html2pdf().set(opt).from(clone).save().then(() => {
@@ -301,7 +264,21 @@ async function compartilharPDF() {
   const original = document.getElementById('pdf-content');
   const clone = original.cloneNode(true);
 
-  prepararCampos(clone);
+  const textareas = clone.querySelectorAll('textarea');
+  textareas.forEach(textarea => {
+    const div = document.createElement('div');
+    div.style.whiteSpace = 'pre-wrap';
+    div.style.border = '1px solid #ccc';
+    div.style.padding = '5px';
+    div.style.minHeight = '80px';
+    div.style.fontWeight = 'bold';
+    div.style.fontSize = '14px';
+    div.style.backgroundColor = 'white';
+    div.style.color = 'blue';
+    div.textContent = textarea.value;
+    textarea.parentNode.replaceChild(div, textarea);
+  });
+
   prepararAssinatura(clone);
 
   const container = document.createElement('div');
@@ -326,6 +303,7 @@ async function compartilharPDF() {
   };
 
   const blob = await html2pdf().set(opt).from(clone).outputPdf('blob');
+
   const file = new File([blob], getNumeroRelatorio(), { type: 'application/pdf' });
 
   if (navigator.canShare && navigator.canShare({ files: [file] })) {
@@ -344,7 +322,6 @@ async function compartilharPDF() {
 
   document.body.removeChild(container);
 }
-
 /* 🔹 Script para fotos (até 3) */
 const fotoInput = document.getElementById('fotoInput');
 const fotosContainer = document.getElementById('fotos-container');
@@ -364,6 +341,7 @@ fotoInput.addEventListener('change', (event) => {
     reader.readAsDataURL(file);
   });
 });
+
 
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('sw.js')
