--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div id="pdf-content">
   <div class="logo-container">
     <img src="logo-smdsm.png" crossorigin="anonymous" alt="Prefeitura" class="logo">
-    <label for="nome" style="font-size: 15px;">Secretaria Municipal de Assistência e Desenvolvimento Social</label>
+    <label for="nome" style="font-size: 18px;">Secretaria Municipal de Defesa Social e Mobilidade</label>
     <img src="logo-setran.png" crossorigin="anonymous" alt="Setran" class="logo">
   </div>
   <h1><u>RELATÓRIO DE ATENDIMENTO DE OCORRÊNCIA</u></h1>
@@ -359,6 +359,7 @@ if ('serviceWorker' in navigator) {
 </script>
 </body>
 </html>
+
 
 
 
