--- a/index.html
+++ b/index.html
@@ -101,7 +101,15 @@
     <label>2 - SOLICITANTE: <input type="text" name="solicitante"></label>
     <label>NÚMERO DO TELEFONE: <input type="text" name="telefone"></label>
   </div>
-  <label>LOCAL DA OCORRÊNCIA: <input type="text" name="local"></label>
+  <label>
+  LOCAL DA OCORRÊNCIA:
+  <input type="text" name="local" id="local" placeholder="Clique em 📍 para preencher automaticamente">
+  <button type="button"
+          onclick="preencherEndereco()"
+          style="margin-top:3px; padding:1px; font-weight:bold; font-size: 10px">
+    📍 Usar localização atual
+  </button>
+</label>
   <label>SITUAÇÃO INFORMADA: <textarea style="min-height: 90px;"></textarea></label>
   <label>3 - RELATÓRIO DO ATENDIMENTO E AÇÕES REALIZADAS: <textarea name="relatorio"></textarea></label>
   <label>- Autos de infração lavrados: <input type="text" name="autos"></label>
@@ -356,9 +364,60 @@ if ('serviceWorker' in navigator) {
     .then(() => console.log('Service Worker registrado com sucesso'))
     .catch(error => console.log('Erro ao registrar o Service Worker:', error));
 }
+  // 🔹 Preenchimento automático do endereço via GPS (OpenStreetMap)
+function preencherEndereco() {
+  if (!navigator.geolocation) {
+    alert("Geolocalização não suportada neste dispositivo.");
+    return;
+  }
+
+  navigator.geolocation.getCurrentPosition(
+    async (position) => {
+      const lat = position.coords.latitude;
+      const lon = position.coords.longitude;
+
+      try {
+        const response = await fetch(
+          `https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lon}`,
+          {
+            headers: {
+              'Accept-Language': 'pt-BR'
+            }
+          }
+        );
+
+        const data = await response.json();
+
+        const endereco = [
+          data.address.road || '',
+          data.address.house_number || '',
+          data.address.suburb || '',
+          data.address.city || data.address.town || '',
+          data.address.state || ''
+        ].filter(Boolean).join(' - ');
+
+        document.getElementById('local').value =
+          endereco || 'Endereço não identificado automaticamente';
+
+      } catch (error) {
+        alert("Erro ao converter localização em endereço.");
+      }
+    },
+    (error) => {
+      alert("Permissão de localização negada ou indisponível.");
+    },
+    {
+      enableHighAccuracy: true,
+      timeout: 10000,
+      maximumAge: 0
+    }
+  );
+}
+
 </script>
 </body>
 </html>
+
 
 
 
